force-app/main/default/objects/Opportunity_Line__c/fields/Quoted_Price_vs_PO__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price_vs_PO__c</fullName>
    <formula>PO_Amount__c -( Quoted_Price__c * Quantity__c )</formula>
    <label>Quoted Price vs PO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>