force-app/main/default/objects/Opportunity_Line__c/fields/Record_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Description__c</fullName>
    <formula>&quot;The fields on this record are locked because tags have been added to the board.  Please contact Sales Operations for changes to the board can be updated.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Description</label>
    <type>Text</type>
</CustomField>