force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Delivery__c</fullName>
    <formula>Ref_SO_Delivery_Miles__c *  Ref_SO_Delivery_Rate__c +  Ref_So_Delivery_Incidentals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>