force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Delivery_Miles__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Delivery_Miles__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Account__r.Standard_Delivery_Miles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Delivery Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>