force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Gross_Margin_Pct__c</fullName>
    <formula>Ref_SO_Gross_Margin__c /  Margin_Ref_SO_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>