force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Labor_Cost__c</fullName>
    <formula>Ref_So_Labor_Hours__c *  Ref_So_Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>