force-app/main/default/objects/Opportunity_Line__c/fields/Ref_So_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ref_So_Labor_Rate__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Margin_Assumption__r.Labor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref So Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>