force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Outside_Processes__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Outside_Processes__c</fullName>
    <formula>Margin_Reference_Sales_Order__r.Margin_Assumption__r.Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Outside Processes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>