force-app/main/default/objects/Opportunity_Line__c/fields/Ref_SO_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ref_SO_Total_Cost__c</fullName>
    <formula>Margin_Ref_SO_Standard_Materials__c +  Ref_SO_Overhead__c +  Ref_SO_Labor_Cost__c +  Ref_SO_Warranty__c +  Ref_SO_Delivery__c +  Ref_So_Delivery_Incidentals__c +  Ref_SO_Other_COS_Allocation__c +  Ref_SO_Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref SO Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>