force-app/main/default/objects/Opportunity_Line__c/fields/Reference_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Opportunity Lines</relationshipLabel>
    <relationshipName>Opportunity_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>