force-app/main/default/objects/Opportunity_Line__c/fields/Request_Buy_America_Pre_Award__c.field-meta.xml
<CustomField>
    <fullName>Request_Buy_America_Pre_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Buy America Pre Award</label>
    <type>Checkbox</type>
</CustomField>