force-app/main/default/objects/Opportunity_Line__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial Number for First Bus</description>
    <label>Serial Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>