force-app/main/default/objects/Opportunity_Line__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date for First Bus</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>