force-app/main/default/objects/Opportunity_Line__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Floor</fullName>
            </value>
            <value>
                <fullName>Low Floor BRT</fullName>
            </value>
            <value>
                <fullName>Low Floor Plus</fullName>
            </value>
            <value>
                <fullName>BRT PLUS</fullName>
            </value>
            <value>
                <fullName>Trolley</fullName>
            </value>
            <value>
                <fullName>Double Decker</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
                <label>SUBURBAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>