force-app/main/default/objects/Opportunity_Line__c/fields/Tag_Request__c.field-meta.xml
<CustomField>
    <fullName>Tag_Request__c</fullName>
    <label>Tag Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Delivery</fullName>
                <label>Contract Option Delivery</label>
            </value>
            <value>
                <fullName>Letter of Intent</fullName>
            </value>
            <value>
                <fullName>Reserve for Bid</fullName>
            </value>
            <value>
                <fullName>Order Received</fullName>
            </value>
            <value>
                <fullName>Other Promised Delivery</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>