force-app/main/default/objects/Opportunity_Line__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Finance_Std_Materials__c +  Materials_adj_for_Options_w_PPI__c +  Overhead__c +   Labor_Cost__c +  Warranty__c +  Delivery__c +  Delivery_Incidentals__c +  Other_COS_Allocation__c +  Outside_Processes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>