force-app/main/default/objects/Opportunity_Line__c/recordTypes/Booked.recordType-meta.xml
<RecordType>
    <fullName>Booked</fullName>
    <active>false</active>
    <label>Booked</label>
</RecordType>