force-app/main/default/objects/Opportunity_Line__c/recordTypes/Forecasted.recordType-meta.xml
<RecordType>
    <fullName>Forecasted</fullName>
    <active>true</active>
    <description>Active Opportunity</description>
    <label>Forecasted</label>
</RecordType>