force-app/main/default/objects/Opportunity_Line__c/recordTypes/Serialized.recordType-meta.xml
<RecordType>
    <fullName>Serialized</fullName>
    <active>true</active>
    <description>Serial Number assigned</description>
    <label>Serialized</label>
</RecordType>