force-app/main/default/objects/Opportunity_Line__c/validationRules/Check_PSM.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_PSM</fullName>
    <active>true</active>
    <description>PSM needs to be assigned before Serial or start date is added</description>
    <errorConditionFormula>AND(ISNULL(Opportunity_Line__r.Account.Project_Sales_Manager__c ) ,OR(ISCHANGED( Serial_Number__c ) ,ISCHANGED( Start_Date__c)) )</errorConditionFormula>
    <errorMessage>Assign a Project Sales Manager to this Account before setting Serial Number or Start Date</errorMessage>
</ValidationRule>