force-app/main/default/objects/Opportunity_Line__c/validationRules/CheckSerial.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSerial</fullName>
    <active>true</active>
    <description>Check that a Serial Number is entered before booking</description>
    <errorConditionFormula>NOT(ISBLANK(Date_Booked__c))  &amp;&amp;  ISBLANK( Serial_Number__c )</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Must have a Serial number when booking an order</errorMessage>
</ValidationRule>