force-app/main/default/objects/Opportunity_Line__c/validationRules/Length_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Length__c ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Length__c</errorDisplayField>
    <errorMessage>Please enter a Length</errorMessage>
</ValidationRule>