force-app/main/default/objects/Opportunity_Line__c/validationRules/Mode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  Mode__c  ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Mode__c</errorDisplayField>
    <errorMessage>Please enter a Mode</errorMessage>
</ValidationRule>