force-app/main/default/objects/Opportunity_Line__c/validationRules/Must_have_Internal_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_Internal_Name</fullName>
    <active>true</active>
    <description>Account must have an internal name before booking</description>
    <errorConditionFormula>AND(ISBLANK(Internal_Name__c), NOT( ISNULL( Date_Booked__c )))</errorConditionFormula>
    <errorMessage>Please set an Internal Name on the Account before booking</errorMessage>
</ValidationRule>