force-app/main/default/objects/Opportunity_Line__c/validationRules/numerSerial.validationRule-meta.xml
<ValidationRule>
    <fullName>numerSerial</fullName>
    <active>true</active>
    <description>Must have a valid serial number</description>
    <errorConditionFormula>NOT(ISNUMBER( Serial_Number__c )) &amp;&amp; not(ISBLANK( Serial_Number__c ))</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid number great than zero and less than 999,999</errorMessage>
</ValidationRule>