force-app/main/default/objects/Opportunity_Line__c/validationRules/PO_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  PO_Amount__c   ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>PO_Amount__c</errorDisplayField>
    <errorMessage>Please enter a PO Amount</errorMessage>
</ValidationRule>