force-app/main/default/objects/Opportunity_Line__c/validationRules/PO_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  PO_Date__c    ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>PO_Date__c</errorDisplayField>
    <errorMessage>Please enter a PO Date</errorMessage>
</ValidationRule>