force-app/main/default/objects/Opportunity_Line__c/validationRules/PO_Ref_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Ref_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  PO_Reference__c     ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>PO_Reference__c</errorDisplayField>
    <errorMessage>Please enter a PO Reference</errorMessage>
</ValidationRule>