force-app/main/default/objects/Opportunity_Line__c/validationRules/Qty_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(  Quantity__c      ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Please enter a Quantity</errorMessage>
</ValidationRule>