force-app/main/default/objects/Opportunity_Line__c/validationRules/Quoted_Price_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quoted_Price_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Quoted_Price__c ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Quoted_Price__c</errorDisplayField>
    <errorMessage>Please enter a Quoted Price</errorMessage>
</ValidationRule>