force-app/main/default/objects/Opportunity_Line__c/validationRules/Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Start_Date__c ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please enter a Start Date</errorMessage>
</ValidationRule>