force-app/main/default/objects/Opportunity_Line__c/validationRules/Style_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Style_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Style__c ) , NOT( ISBLANK( Date_Booked__c ) ))</errorConditionFormula>
    <errorDisplayField>Style__c</errorDisplayField>
    <errorMessage>Please enter a Style</errorMessage>
</ValidationRule>