force-app/main/default/objects/Opportunity_Line__c/listViews/Forecasted_Orders1.listView-meta.xml
<ListView>
    <fullName>Forecasted_Orders1</fullName>
    <columns>Opportunity_Line__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>Length__c</columns>
    <columns>Mode__c</columns>
    <columns>Style__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Booked__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Forecasted Orders</label>
</ListView>